# musi

./: .clang-format  .clang-tidy  .dev.vars.example  .editorconfig  .gitattributes  .gitignore  .ocamlformat  .rscheck.toml  .taplo.toml  AGENTS.md  CHANGELOG.md  CHECKPOINT.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMANDS.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  Makefile  README.md  alire.toml  build.zig  dune  dune-project  find-agents.sh  grammar.abnf  grammar.ebnf  install.ps1  install.sh  mspackage.json  mspackage.toml  musi.gpr  musi.json  package.json  wrangler.toml  xmake.lua
crates/msc/: Cargo.toml
crates/msc/src/: lib.rs  main.rs  pipeline.rs  resolve_config.rs
crates/msc/tests/: std_typecheck.rs
crates/msc_ast/: Cargo.toml
crates/msc_ast/src/: attr.rs  decl.rs  expr.rs  lib.rs  lit.rs  pat.rs  ty_param.rs  util.rs  visitor.rs
crates/msc_bc/: Cargo.toml
crates/msc_bc/src/: disasm.rs  encoding.rs  lib.rs  type_tag.rs
crates/msc_builtins/: Cargo.toml
crates/msc_builtins/src/: core.rs  ffi.rs  lib.rs
crates/msc_emit/: Cargo.toml
crates/msc_emit/src/: const_pool.rs  emitter.rs  error.rs  global_table.rs  lib.rs  module.rs  section.rs  string_table.rs  type_pool.rs  type_table.rs
crates/msc_lex/: Cargo.toml
crates/msc_lex/src/: error.rs  lexer.rs  lib.rs  token.rs  trivia.rs
crates/msc_lsp/: Cargo.toml
crates/msc_lsp/src/: backend.rs  lib.rs  main.rs  to_proto.rs  types.rs
crates/msc_manifest/: Cargo.toml
crates/msc_manifest/src/: error.rs  lib.rs
crates/msc_parse/: Cargo.toml
crates/msc_parse/src/: error.rs  expr.rs  lib.rs  parser.rs  pat.rs  ty.rs
crates/msc_resolve/: Cargo.toml
crates/msc_resolve/src/: builtin.rs  error.rs  git.rs  graph.rs  resolver.rs
crates/msc_sema/: Cargo.toml
crates/msc_sema/src/: attr_util.rs  checker.rs  consistency.rs  def.rs  error.rs  exports.rs  lib.rs  options.rs  pipeline.rs  scope.rs  subst.rs  subtype.rs  types.rs  unify.rs  well_known.rs
crates/msc_sema/tests/: checker_integration.rs  resolver_integration.rs  std_typecheck.rs
crates/msc_vm/: Cargo.toml
crates/msc_vm/src/: channel.rs  error.rs  heap.rs  host.rs  lib.rs  loader.rs  value.rs  verifier.rs  vm.rs
crates/musi/: Cargo.toml
crates/musi/src/: cli.rs  compiler.rs  config.rs  deps.rs  diag.rs  diag_catalog_gen.rs  diagnostic.rs  driver.rs  error.rs  fetch.rs  lib.rs  lock.rs  main.rs  workspace.rs
crates/musi/tests/: cli.rs  loc_cap.rs  smoke.rs
crates/musi_ast/: Cargo.toml
crates/musi_ast/src/: arena.rs  lib.rs  node.rs  types.rs  visitor.rs
crates/musi_basic/: Cargo.toml  README.md
crates/musi_basic/src/: arena.rs  diagnostic.rs  error.rs  interner.rs  lib.rs  source.rs  span.rs  token.rs  types.rs
crates/musi_bc/: Cargo.toml
crates/musi_bc/src/: disasm.rs  lib.rs
crates/musi_cli/: Cargo.toml
crates/musi_cli/src/: cli.rs  cmds.rs  dispatcher.rs  main.rs  options.rs  types.rs
crates/musi_codegen/: Cargo.toml
crates/musi_codegen/src/: emitter.rs  error.rs  intrinsics.rs  lib.rs  module.rs  opcode.rs
crates/musi_core/: Cargo.toml  README.md
crates/musi_core/src/: diag.rs  error.rs  interner.rs  lib.rs  source.rs  span.rs  symbol.rs  token.rs
crates/musi_drive/: Cargo.toml
crates/musi_drive/src/: cmds.rs  lib.rs  main.rs
crates/musi_driver/: Cargo.toml
crates/musi_driver/src/: lib.rs
crates/musi_errors/: Cargo.toml  README.md
crates/musi_errors/src/: code.rs  diagnostic.rs  helpers.rs  lib.rs  parse_errors.rs  severity.rs  types.rs
crates/musi_fmt/: Cargo.toml
crates/musi_fmt/src/: imports.rs  lib.rs  line_width.rs  markdown.rs  paths.rs  pretty.rs  protected.rs  roles.rs  source.rs  tests.rs  token_class.rs
crates/musi_foundation/: Cargo.toml
crates/musi_foundation/modules/: core.ms  crypto_host.ms  encoding_host.ms  env.ms  ffi.ms  fmt.ms  fs.ms  intrinsics.ms  io.ms  json_host.ms  log.ms  path_host.ms  process.ms  random.ms  runtime.ms  syntax.ms  test.ms  text.ms  time.ms  uuid_host.ms
crates/musi_hir/: Cargo.toml
crates/musi_interner/: Cargo.toml
crates/musi_lex/: Cargo.toml  README.md
crates/musi_lexgen/: Cargo.toml  README.md
test/: .gitignore  basic_test.ml  dune  fuzz_parser.sh  lex_test.ml  main.ml  parse_test.ml  run_checker.ml  run_lexer_tests.ml  run_parser_tests.ml  run_resolver.ml  run_resolver_tests.ml  runner.ml  test_helpers.ml  test_lexer.ml  test_parser.ml  validate.ml  validate.mli
test/fail/: codegen_decorator_no_args.ms  codegen_decorator_non_string_arg.ms  codegen_decorator_on_non_extern.ms  codegen_decorator_unknown.ms  codegen_decorator_wrong_arg_count.ms  parse_array_index_missing_bracket.ms  parse_array_lit_missing_comma.ms  parse_array_type_missing_bracket.ms  parse_attr_missing_bracket.ms  parse_empty_match_fail.ms  parse_extern_missing_semicolon.ms  parse_fn_args_missing_comma.ms  parse_fn_call_missing_parens.ms  parse_fn_def_missing_parens.ms  parse_fn_params_missing_comma.ms  parse_fn_sig_wrong_order.ms  parse_match_missing_comma.ms  parse_match_multi_pattern_missing_comma.ms  parse_missing_operand.ms  parse_missing_semicolon.ms  parse_missing_type_colon.ms  parse_nested_record_lit_fail.ms  parse_record_def_missing_comma.ms  parse_record_pattern_missing_comma.ms  parse_stmt_missing_semicolon.ms  parse_tuple_lit_missing_comma.ms  parse_unclosed_array.ms  parse_unclosed_block.ms  parse_unterminated_string.ms  parse_unterminated_template.ms
test/pass/: codegen_binop_add.expect  codegen_binop_add.ms  codegen_lit_int.expect  codegen_lit_int.ms  codegen_module_export.ms  codegen_module_link_key.ms  codegen_proc_call.expect  lex_identifiers.ms  lex_keywords.ms  lex_numeric.ms  lex_operators.ms  lex_strings.ms  parse_decorator_link.ms  parse_decorator_multiple.ms  parse_expr_assign.ms  parse_expr_binding.ms  parse_expr_block.ms  parse_expr_break_and_continue.ms  parse_expr_for.ms  parse_expr_for_with_continue.ms  parse_expr_if.ms  parse_expr_literals.ms  parse_expr_loop.ms  parse_expr_match.ms  parse_expr_proc.ms  parse_expr_tuple.ms  parse_expr_while_with_break.ms  parse_stmt_alias.ms  parse_stmt_extern_with_abi.ms  parse_stmt_import_export.ms
(+3585 files in other folders)
