[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/musi-lang/musi"
license = "MIT OR Apache-2.0"
keywords = ["compiler", "interpreter", "language", "musi"]
categories = ["compilers", "interpreters", "development-tools"]

[workspace.dependencies]
clap = { version = "4.5.53", features = ["derive"] }
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[workspace.lints.rust]
keyword_idents_2024 = "forbid"
missing_unsafe_on_extern = "forbid"
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"
unused_results = "forbid"

[workspace.lints.clippy]
absolute_paths = "deny"
# arithmetic_side_effects = "deny"  # use checked ops where overflow matters
as_conversions = "deny"
as_pointer_underscore = "deny"
as_underscore = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
empty_drop = "deny"
# exit = "deny"  # CLI tools need exit codes
filetype_is_file = "deny"
fn_to_numeric_cast_any = "deny"
get_unwrap = "deny"
# indexing_slicing = "deny"  # use `.get()` in critical paths only
infinite_loop = "deny"
let_underscore_must_use = "deny"
mem_forget = "deny"
missing_asserts_for_indexing = "deny"
multiple_unsafe_ops_per_block = "deny"
mutex_atomic = "deny"
panic = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
str_to_string = "deny"
string_slice = "deny"
tests_outside_test_module = "deny"
todo = "deny"
try_err = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unreachable = "deny"
unwrap_in_result = "deny"
# unwrap_used = "deny"  # use `.expect()` in prod, but allow `.unwrap()` in tests/prototypes

cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# https://doc.rust-lang.org/cargo/reference/profiles.html#profile-settings
[profile.release]
opt-level = "s"
debug = "full"
strip = "symbols"
lto = true
panic = "abort"
incremental = true
codegen-units = 1

[profile.bench]
codegen-units = 16
lto = "thin"
