[workspace]
members = ["crates/*"]
resolver = "2"

# https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.package]
version = "0.1.0-rc1"
edition = "2024"
rust-version = "1.87.0"
description = "An interpreted systems programming language."
readme = "README.md"
homepage = "https://musi-lang.com"
repository = "https://github.com/musi-lang/musi"
license = "MIT OR Apache-2.0"
keywords = ["compiler", "interpreter", "language", "musi"]
categories = ["compilers", "interpreters", "development-tools"]
publish = false

[workspace.dependencies]
byteorder = "1.5.0"
clap = { version = "4.6.0", features = ["derive"] }
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }
intaglio = "1.13.2"
memchr = "2.8.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
criterion = "0.8.2"
ureq = "3.2.0"
flate2 = "1.1.9"
tar = "0.4.45"
semver = { version = "1.0.27", features = ["serde"] }
dirs = "6.0"
sha2 = "0.10.9"
toml = "1.0.7+spec-1.1.0"
tempfile = "3"
toml_edit = "0.25.5+spec-1.1.0"
hex = "0.4.3"
libc = "0.2.183"
libffi = { version = "5.1.0", features = ["system"] }
libloading = "0.9.0"
async-lsp = { version = "0.2.3", features = ["tokio", "omni-trait"] }
lsp-types = "0.95.1"
tokio = { version = "1.50.0", features = [
    "rt-multi-thread",
    "io-std",
    "sync",
    "macros",
] }

[workspace.lints.rust]
keyword_idents_2024 = "forbid"
missing_unsafe_on_extern = "forbid"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "forbid"
unused_results = "forbid"

[workspace.lints.clippy]
absolute_paths = "deny"
# arithmetic_side_effects = "deny"  # use checked ops where overflow matters
as_conversions = "deny"
as_pointer_underscore = "deny"
as_underscore = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
empty_drop = "deny"
exhaustive_structs = "allow" # intentionally exhaustive for pattern matching
exhaustive_enums = "allow" # intentionally exhaustive for pattern matching
# exit = "deny"  # CLI tools need exit codes
filetype_is_file = "deny"
fn_to_numeric_cast_any = "deny"
get_unwrap = "deny"
# indexing_slicing = "deny"  # use `.get()` in critical paths only
infinite_loop = "deny"
let_underscore_must_use = "deny"
mem_forget = "deny"
missing_asserts_for_indexing = "deny"
module_name_repetitions = "allow" # intentionally named after their module
multiple_crate_versions = "allow"  # transitive deps (e.g., windows-sys) bring multiple versions
multiple_unsafe_ops_per_block = "deny"
mutex_atomic = "deny"
panic = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
str_to_string = "deny"
string_slice = "deny"
struct_field_names = "allow"
tests_outside_test_module = "deny"
todo = "deny"
try_err = "deny"
unimplemented = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unreachable = "deny"
unwrap_in_result = "deny"
# unwrap_used = "deny"  # use `.expect()` in prod, but allow `.unwrap()` in tests
wildcard_imports = "allow"

cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

[profile.dev]
debug = 1
incremental = false
codegen-units = 1

# https://doc.rust-lang.org/cargo/reference/profiles.html#profile-settings
[profile.release]
opt-level = "s"
debug = "full"
strip = "symbols"
lto = true
panic = "abort"
incremental = true
codegen-units = 1

[profile.bench]
codegen-units = 16
lto = "thin"
