(library
 (name test_helpers)
 (modules test_helpers)
 (libraries alcotest unix))

(executable
 (name run_lexer_tests)
 (modules run_lexer_tests)
 (libraries alcotest unix musi_basic musi_lex test_helpers))

(executable
 (name run_parser_tests)
 (modules run_parser_tests)
 (libraries alcotest unix musi_basic musi_lex musi_parse test_helpers))

(rule
 (alias runtest)
 (deps
  (source_tree lexer))
 (action
  (run ./run_lexer_tests.exe)))

(rule
 (alias runtest)
 (deps
  (source_tree parser))
 (action
  (run ./run_parser_tests.exe)))
