(library
 (name test_helpers)
 (modules test_helpers)
 (libraries alcotest unix musi_basic musi_lex musi_parse))

(executable
 (name run_lexer_tests)
 (modules run_lexer_tests)
 (libraries alcotest unix musi_basic musi_lex test_helpers))

(executable
 (name run_parser_tests)
 (modules run_parser_tests)
 (libraries alcotest unix musi_basic musi_lex musi_parse test_helpers))

(executable
 (name run_resolver_tests)
 (modules run_resolver_tests)
 (libraries
  alcotest
  unix
  musi_basic
  musi_lex
  musi_parse
  musi_sema
  test_helpers))

(executable
 (name run_checker_tests)
 (modules run_checker_tests)
 (libraries
  alcotest
  unix
  musi_basic
  musi_lex
  musi_parse
  musi_sema
  test_helpers))

(rule
 (alias runtest)
 (deps
  (source_tree lexer))
 (action
  (run ./run_lexer_tests.exe)))

(rule
 (alias runtest)
 (deps
  (source_tree parser))
 (action
  (run ./run_parser_tests.exe)))

(rule
 (alias runtest)
 (deps
  (source_tree resolver))
 (action
  (run ./run_resolver_tests.exe)))

(rule
 (alias runtest)
 (deps
  (source_tree checker))
 (action
  (run ./run_checker_tests.exe)))
