(library
 (name test_helpers)
 (modules test_helpers)
 (libraries alcotest unix musi_basic musi_lex musi_parse))

(executable
 (name run_lexer)
 (modules run_lexer)
 (libraries alcotest unix musi_basic musi_lex test_helpers))

(executable
 (name run_parser)
 (modules run_parser)
 (libraries alcotest unix musi_basic musi_lex musi_parse test_helpers))

(executable
 (name run_resolver)
 (modules run_resolver)
 (libraries
  alcotest
  unix
  musi_basic
  musi_lex
  musi_parse
  musi_sema
  test_helpers))

(executable
 (name run_checker)
 (modules run_checker)
 (libraries
  alcotest
  unix
  musi_basic
  musi_lex
  musi_parse
  musi_sema
  test_helpers))

(rule
 (alias runtest)
 (deps
  (source_tree lexer))
 (action
  (run ./run_lexer.exe)))

(rule
 (alias runtest)
 (deps
  (source_tree parser))
 (action
  (run ./run_parser.exe)))

(rule
 (alias runtest)
 (deps
  (source_tree resolver))
 (action
  (run ./run_resolver.exe)))

(rule
 (alias runtest)
 (deps
  (source_tree checker))
 (action
  (run ./run_checker.exe)))
