[package]
name = "msc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[[bin]]
name = "msc"
path = "src/main.rs"

[dependencies]
msc_shared = { path = "../msc_shared" }
msc_ast = { path = "../msc_ast" }
msc_lex = { path = "../msc_lex" }
msc_parse = { path = "../msc_parse" }
msc_sema = { path = "../msc_sema" }
msc_emit = { path = "../msc_emit" }
msc_resolve = { path = "../msc_resolve" }
msc_vm = { path = "../msc_vm" }
msc_builtins = { path = "../msc_builtins" }
msc_manifest = { path = "../msc_manifest" }
clap = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
