[package]
name = "msc_ast"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Abstract syntax tree for the Musi compiler"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["compiler", "musi", "ast"]
categories = ["development-tools"]
publish.workspace = true

[dependencies]
msc_shared = { path = "../msc_shared" }

[lints]
workspace = true
