[package]
name = "msc_bc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Musi .seam bytecode format definitions"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["bytecode", "musi", "format"]
categories = ["encoding"]
publish.workspace = true

[lints]
workspace = true
