[package]
name = "msc_builtins"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Musi standard library and FFI runtime"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["musi", "stdlib", "ffi", "runtime"]
categories = ["interpreters"]
publish.workspace = true

[dependencies]
libc = { workspace = true }
libffi = { workspace = true }
libloading = { workspace = true }
msc_vm = { path = "../msc_vm" }

[lints]
workspace = true
