[package]
name = "msc_emit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Bytecode emitter: AST+sema -> .seam"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["compiler", "bytecode", "musi"]
categories = ["compilers"]
publish.workspace = true

[dependencies]
msc_bc = { path = "../msc_bc" }
msc_ast     = { path = "../msc_ast" }
msc_sema    = { path = "../msc_sema" }
msc_shared  = { path = "../msc_shared" }
thiserror     = { workspace = true }

[dev-dependencies]
msc_lex     = { path = "../msc_lex" }
msc_parse   = { path = "../msc_parse" }

[lints]
workspace = true
