[package]
name = "msc_lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Musi language server"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["lsp", "musi", "language-server"]
categories = ["development-tools"]
publish.workspace = true

[lib]
name = "msc_lsp"
path = "src/lib.rs"

[[bin]]
name = "msc_lsp"
path = "src/main.rs"

[dependencies]
msc_ast = { path = "../msc_ast" }
msc_lex = { path = "../msc_lex" }
msc_parse = { path = "../msc_parse" }
msc_resolve = { path = "../msc_resolve" }
msc_sema = { path = "../msc_sema" }
msc_shared = { path = "../msc_shared" }
msc_manifest = { path = "../msc_manifest" }
async-lsp = { workspace = true }
lsp-types = { workspace = true }
futures = "0.3"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = "0.5"
