[package]
name = "msc_parse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Parser for the Musi compiler"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["compiler", "musi", "parser"]
categories = ["development-tools"]
publish.workspace = true

[dependencies]
msc_ast = { path = "../msc_ast" }
msc_lex = { path = "../msc_lex" }
msc_shared = { path = "../msc_shared" }
thiserror = { workspace = true }

[lints]
workspace = true
