[package]
name = "msc_resolve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Module resolution for the Musi compiler"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["compiler", "musi", "module-resolution"]
categories = ["development-tools"]
publish.workspace = true

[dependencies]
msc_shared = { path = "../msc_shared" }
msc_ast = { path = "../msc_ast" }
msc_lex = { path = "../msc_lex" }
msc_parse = { path = "../msc_parse" }
msc_manifest = { path = "../msc_manifest" }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
