[package]
name = "msc_vm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Musi bytecode interpreter"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["virtual-machine", "interpreter", "bytecode", "musi"]
categories = ["interpreters"]
publish.workspace = true

[dependencies]
msc_bc = { path = "../msc_bc" }
thiserror     = { workspace = true }

[lints]
workspace = true
