[package]
name = "musi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Musi language compiler CLI"
license.workspace = true
publish.workspace = true

[lib]
name = "musi"
path = "src/lib.rs"

[[bin]]
name = "musi"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
music_hir = { path = "../music_hir" }
music_codegen = { path = "../music_codegen" }
musi_vm = { path = "../musi_vm" }
music_shared = { path = "../music_shared" }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
