[package]
name = "musi-ast"
description = "AST definitions for Musi compiler"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords = [""]
categories = [""]

[dependencies]
musi-basic = { path = "../musi_basic" }
musi-lex = { path = "../musi_lex" }

[lints]
workspace = true
