[package]
name = "musi_ast"
description = "AST type definitions for the Musi compiler"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords = ["compiler", "musi", "ast"]
categories = ["development-tools"]

[dependencies]
musi_shared = { path = "../musi_shared" }

[lints]
workspace = true
