[package]
name = "musi-basic"
description = "Basic utilities for Musi compiler"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords = [""]
categories = [""]

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
