[package]
name = "musi_cli"
description = "Shared driver logic for Musi"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "music"
path = "src/main.rs"

[dependencies]
musi_core = { path = "../musi_core" }
musi_ast = { path = "../musi_ast" }
musi_lex = { path = "../musi_lex" }
musi_parse = { path = "../musi_parse" }
musi_sema = { path = "../musi_sema" }
clap = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
