[package]
name = "musi_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Musi compiler command-line interface"
publish = false
readme.workspace = true

[[bin]]
name = "musi"
path = "src/main.rs"

[dependencies]
musi_lexer = { path = "../musi_lexer" }
musi_parser = { path = "../musi_parser" }
musi_sema = { path = "../musi_sema" }
musi_codegen = { path = "../musi_codegen" }
musi_runtime = { path = "../musi_runtime" }
musi_lsp = { path = "../musi_lsp" }
clap = { version = "4.5.54", features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = "2.1.2"

[lints]
workspace = true
