[package]
name = "musi-codegen"
description = "Bytecode generation for Musi compiler"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords = [""]
categories = [""]

[dependencies]
musi-basic = { path = "../musi_basic" }
musi-ast = { path = "../musi_ast" }

[lints]
workspace = true
