[package]
name = "musi_core"
description = "Core primitives for Musi compiler"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror = { workspace = true }

[lints]
workspace = true
