[package]
name = "musi_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Foundation primitives and utilities for Musi compiler"
publish = false
readme.workspace = true

[lints]
workspace = true
