[package]
name = "musi-drive"
description = "Shared driver logic for Musi binaries"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
musi-basic = { path = "../musi_basic" }
musi-lex = { path = "../musi_lex" }

[lints]
workspace = true
