[package]
name = "musi_drive"
description = "Shared driver logic for Musi"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "music"
path = "src/main.rs"

[dependencies]
musi_basic = { path = "../musi_basic" }
musi_lex = { path = "../musi_lex" }
clap = { workspace = true }

[lints]
workspace = true
