[package]
name = "musi_driver"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
musi_core = { path = "../musi_core" }
musi_source = { path = "../musi_source" }
musi_syntax = { path = "../musi_syntax" }
musi_types = { path = "../musi_types" }
musi_bc = { path = "../musi_bc" }
musi_vm = { path = "../musi_vm" }
thiserror = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
