[package]
name = "musi_errors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false
readme.workspace = true
[dependencies]
musi_core = { path = "../musi_core" }
musi_source = { path = "../musi_source" }

[dev-dependencies]
tempfile = "3.24.0"

[lints]
workspace = true
