[package]
name = "musi_fmt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
musi_project = { path = "../musi_project" }
music_base = { path = "../music_base" }
music_syntax = { path = "../music_syntax" }
thiserror = { workspace = true }

[lints]
workspace = true
