[package]
name = "musi_interner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "String interning for memory efficiency"
publish = false
readme.workspace = true
[lints]
workspace = true
