[package]
name = "musi-lex"
description = "Lexer for Musi compiler"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
musi-basic = { path = "../musi_basic" }
thiserror = { workspace = true }

[lints]
workspace = true
