[package]
name = "musi_lex"
description = "Lexer for Musi compiler"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
musi_basic = { path = "../musi_basic" }
musi_macros = { path = "../musi_macros" }
thiserror = { workspace = true }

[lints]
workspace = true
