[package]
name = "musi_lex"
description = "Lexer (tokenizer) for the Musi compiler"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords = ["compiler", "musi", "lexer"]
categories = ["development-tools"]

[dependencies]
thiserror = { workspace = true }
musi_shared = { path = "../musi_shared" }

[lints]
workspace = true
